.tanzu/config/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  annotations:
    apps.tanzu.vmware.com/promotable: ""
    apps.tanzu.vmware.com/promote-group: ContainerApp/exploreinclusionapp
  name: inclusionapp-route
spec:
  parentRefs:
  - group: networking.tanzu.vmware.com
    kind: Entrypoint
    name: exploreinclusionapp
  rules:
  - backendRefs:
    - kind: Service
      name: exploreinclusionapp
      port: 8080
